Preparação da publicação

--- a/View/View.EntregasDetalhe.fmx
+++ b/View/View.EntregasDetalhe.fmx
@@ -1,10 +1,11 @@
 object view_EntregasDetalhe: Tview_EntregasDetalhe
   Left = 0
   Top = 0
-  Caption = 'Extrato'
-  ClientHeight = 601
-  ClientWidth = 360
+  Caption = 'Lista de Remessas'
+  ClientHeight = 560
+  ClientWidth = 356
   Fill.Kind = Solid
+  FormStyle = StayOnTop
   WindowState = wsMaximized
   FormFactor.Width = 320
   FormFactor.Height = 480
@@ -14,33 +15,31 @@ object view_EntregasDetalhe: Tview_EntregasDetalhe
   DesignerMasterStyle = 0
   object layoutPadrao: TLayout
     Align = Contents
-    Size.Width = 360.000000000000000000
-    Size.Height = 601.000000000000000000
+    Size.Width = 356.000000000000000000
+    Size.Height = 560.000000000000000000
     Size.PlatformDefault = False
     TabOrder = 0
     object layoutFiltro: TLayout
       Align = Top
-      Margins.Top = 10.000000000000000000
-      Position.Y = 43.000000000000000000
-      Size.Width = 360.000000000000000000
-      Size.Height = 46.000000000000000000
+      Position.Y = 33.000000000000000000
+      Size.Width = 356.000000000000000000
+      Size.Height = 40.000000000000000000
       Size.PlatformDefault = False
       TabOrder = 0
-      object Label2: TLabel
+      object labelDescricao: TLabel
+        Align = Top
         StyledSettings = [Family]
-        Margins.Left = 8.000000000000000000
-        Margins.Top = 15.000000000000000000
-        Margins.Bottom = 15.000000000000000000
-        Position.X = 9.000000000000000000
-        Position.Y = 7.000000000000000000
-        Size.Width = 344.000000000000000000
-        Size.Height = 28.000000000000000000
+        Margins.Left = 5.000000000000000000
+        Margins.Right = 5.000000000000000000
+        Position.X = 5.000000000000000000
+        Size.Width = 346.000000000000000000
+        Size.Height = 33.000000000000000000
         Size.PlatformDefault = False
         TextSettings.Font.Size = 14.000000000000000000
         TextSettings.Font.StyleExt = {00060000000100000004000000}
         TextSettings.FontColor = claDarkcyan
         TextSettings.HorzAlign = Center
-        Text = 'Entregas Detalhadas'
+        Text = 'Descri'#231#227'o'
         TabOrder = 0
       end
     end
@@ -49,12 +48,12 @@ object view_EntregasDetalhe: Tview_EntregasDetalhe
       CanFocus = True
       ClipChildren = True
       Cursor = crHandPoint
-      Margins.Left = 20.000000000000000000
-      Margins.Top = 30.000000000000000000
-      Margins.Right = 20.000000000000000000
-      Margins.Bottom = 20.000000000000000000
-      Size.Width = 320.000000000000000000
-      Size.Height = 413.000000000000000000
+      Margins.Left = 5.000000000000000000
+      Margins.Top = 5.000000000000000000
+      Margins.Right = 5.000000000000000000
+      Margins.Bottom = 5.000000000000000000
+      Size.Width = 346.000000000000000000
+      Size.Height = 428.000000000000000000
       Size.PlatformDefault = False
       StyleLookup = 'gridstyle'
       TextSettings.HorzAlign = Trailing
@@ -63,8 +62,8 @@ object view_EntregasDetalhe: Tview_EntregasDetalhe
       RowHeight = 50.000000000000000000
       RowCount = 0
       Options = [ColLines, RowLines, RowSelect, Tabs, Header, AutoDisplacement]
-      Viewport.Width = 316.000000000000000000
-      Viewport.Height = 388.000000000000000000
+      Viewport.Width = 342.000000000000000000
+      Viewport.Height = 403.000000000000000000
       object ctringColumnRemessa: TStringColumn
         Header = 'Remessa / NN'
         Size.Width = 113.000000000000000000
@@ -80,22 +79,22 @@ object view_EntregasDetalhe: Tview_EntregasDetalhe
     end
     object layoutFooter: TLayout
       Align = Bottom
-      Position.Y = 552.000000000000000000
-      Size.Width = 360.000000000000000000
+      Position.Y = 511.000000000000000000
+      Size.Width = 356.000000000000000000
       Size.Height = 49.000000000000000000
       Size.PlatformDefault = False
       TabOrder = 2
     end
     object layoutTitle: TLayout
       Align = Top
-      Size.Width = 360.000000000000000000
+      Size.Width = 356.000000000000000000
       Size.Height = 33.000000000000000000
       Size.PlatformDefault = False
       TabOrder = 3
       object rectangleTitle: TRectangle
         Align = Client
         Fill.Color = xFF03A9F4
-        Size.Width = 360.000000000000000000
+        Size.Width = 356.000000000000000000
         Size.Height = 33.000000000000000000
         Size.PlatformDefault = False
         Stroke.Color = xFF03A9F4
@@ -109,27 +108,27 @@ object view_EntregasDetalhe: Tview_EntregasDetalhe
               PNG = {
                 89504E470D0A1A0A0000000D49484452000000300000003008060000005702F9
                 87000000017352474200AECE1CE90000000467414D410000B18F0BFC61050000
-                028A494441546843ED96CFAB125114C79DB17C92BE4742D4261444B4220C9E81
-                2D5AD99F506DFC330417AEC48588B872D33268D3CE20E83D0ADEE68DC15B0A2E
-                14FC81B8D3D4307F8D8668E7DC1944A767CC6B661E77EA7EE08073CFE19E73EE
-                FDDE7BB530180C0683C1F847E1BADDEE935EAF17C2DFD29079E0AAD56A683E9F
-                7F1345F17BABD57A8663928B7E48F18BC5A2BB96C126044108A24F0AA117AED1
-                6860F11DB97642B3D93C0B87C3F7D02F85D109AEFCD3ED95476AB5DAB9DFEF7F
-                00FE5B1843222984148F9A97EB2640F1458FC7F310FC4E8C21911472E9CAD7EB
-                75C14CC5EF681E8A3FF7F97C8FC06FBE9547D96C15CF93480AD9A7F9AF6EB7DB
-                1CC55FB6F25BC5532D9BDFEE792CDEEBF53E06FF119815E3349A6AAE12CC95CB
-                E550201038B1D96C77E5314BBBDD5EF13C7FE270388676BBFDA7D56A5DCBAEBF
-                02E65A4FA7D30B97CBF50E3E57D2A876B84AA572ACD4BC51F4FBFDF790F3404A
-                FD67D41E34BE542A1D2E974B55936A05F2A00C55D5A6564238D9512A957A118B
-                C5DE3A9D4ED43A012534180CCE20E91C3E513E57D2B0128EE35693C9A4188944
-                DEC027CEA91B37C0EE2493C957A3D16828EF36A1D3E908C160100FB107CCADD1
-                EE83B9C0309FEE902660275E8FC7E39D26E0E07D8946A398F8A61CA7C50C7D43
-                30016902B6FA875C3F01AED7CFF178FC10FC9A64741D6C37B1B313D0C4693E9F
-                DF9C119AD934A194D36C36FB94CD667127A867EF4E601370E0F16F05F5EC3D13
-                666D42B9131F4DD784F29D1045F1432E9773486174439AC0C70E0EF6464EF046
-                0C0B85C231F8A8BF5E919D264052A34C26F312C6F06AD5BD01A356049BB89D4E
-                A79FC3DF632E914814E17B08B644A79E18B9A5D8841D0C738860BA177F1D60F1
-                462E1283C16030FE6B2C965FA5ED8712F190AF460000000049454E44AE426082}
+                0289494441546843ED96CFAB125114C79D314DD2F74888DA8482885684C133B0
+                452BFB13AA8D7F86E0C295B81011576E5A066DDA1904BD28789B37062D05170A
+                FEDC6A4A4CFE1A0DD1CEB933884ECF98D7CC3CEED4FDC001EF3D8739DF73EFB9
+                F76A6330180C0683F18FC20D068347C3E1308ABFE529EBC0351A8DE862B1F826
+                49D2F75EAFF704E76417FD10F1CBE572B051C022044188A04F0EA117AEDD6EA3
+                F8BEA29DD0E974CE62B1D81DF4CB6174822BFF7877E59166B3791E0A85EE81FF
+                06C690480A21E2B1E715DD04105FF1FBFDF7C1EFC11812492117AE7CABD512AC
+                247EAFE741FC7930187C007EEBAD3CB6CD8E789E4452C8A19EFFE2F3F9AC21FE
+                A295DF114F75DBFC76CFA3F84020F010FCC760768CD3699AB94C3057ABD5A2E1
+                70F8D4E974DE56E66CDD6E77ED70384EDD6EB7E872B97EDAEDF68DE2FA2B789E
+                DFCC66B3AF5EAFF70D0CD7F2AC7EB87ABD7EA2EE79B3188D466F21E77539F59F
+                D17AD0F86AB57AB45AAD347D542F9007DB509336AD2D841F3BCE66B3CF92C9E4
+                6B8FC783BD4EC0161245F10C922E6088ED73A91E56C371DC7A3A9D56E2F1F82B
+                18E2370DE31AD8AD4C26F3623C1E8BCA6E13FAFDBE108944F010FBC17C3AED2E
+                98170CF3190E290276E2E56432D92B020EDEE7442281891D4A9C1E33F50DC104
+                A408D8EA1F8A7E025CAF9F52A9D411F875B5D155B05BC4DE4E40111F4BA5D2F6
+                8CD0CCB608753BCDE7F30F85420177827A0EEE041601071EFF5650CFC13361D5
+                22D43BF1DE7245A8DF094992DE158B45B71C4637A4087CECE0606FDB09DE08B1
+                5C2E9F808FFAEB15D92B025A6A9CCFE79FC31C5EAD861760D68A60113773B9DC
+                53F87BCCA5D3E90A8C45B0153A8DC4CC2DC5225C60984302335CFC5580E2CD5C
+                240683C160FCD7D86CBF00A5A5871248BA5DA80000000049454E44AE426082}
               FileName = 
                 'C:\Users\TI\Desktop\Workspace\Projetos\Delphi\DeliveryControl\im' +
                 'ages\arrow_exit\res\mipmap-mdpi\ic_launcher.png'
@@ -146,7 +145,7 @@ object view_EntregasDetalhe: Tview_EntregasDetalhe
         Align = Contents
         StyledSettings = [Family]
         Locked = True
-        Size.Width = 360.000000000000000000
+        Size.Width = 356.000000000000000000
         Size.Height = 33.000000000000000000
         Size.PlatformDefault = False
         TextSettings.Font.Size = 20.000000000000000000
