--- a/View/View.EntregasDetalhe.LgXhdpiPh.fmx
+++ b/View/View.EntregasDetalhe.LgXhdpiPh.fmx
@@ -6,17 +6,23 @@ inherited view_EntregasDetalhe_LgXhdpiPh: Tview_EntregasDetalhe_LgXhdpiPh
     Size.Width = 450.000000000000000000
     Size.Height = 695.000000000000000000
     inherited layoutFiltro: TLayout
+      Margins.Top = 10.000000000000000000
+      Position.Y = 43.000000000000000000
       Size.Width = 450.000000000000000000
-      inherited Label2: TLabel
+      inherited labelDescricao: TLabel
+        Margins.Top = 15.000000000000000000
+        Margins.Bottom = 15.000000000000000000
+        Position.Y = 15.000000000000000000
+        Size.Width = 440.000000000000000000
         TextSettings.Font.StyleExt = {00060000000100000004000000}
       end
     end
     inherited stringGridExtrato: TStringGrid
-      Size.Width = 410.000000000000000000
-      Size.Height = 507.000000000000000000
+      Size.Width = 440.000000000000000000
+      Size.Height = 553.000000000000000000
       TextSettings.Font.Size = 11.000000000000000000
-      Viewport.Width = 410.000000000000000000
-      Viewport.Height = 507.000000000000000000
+      Viewport.Width = 440.000000000000000000
+      Viewport.Height = 553.000000000000000000
       inherited ctringColumnRemessa: TStringColumn
         Size.Width = 113.000000000000000000
       end
@@ -42,27 +48,27 @@ inherited view_EntregasDetalhe_LgXhdpiPh: Tview_EntregasDetalhe_LgXhdpiPh
               PNG = {
                 89504E470D0A1A0A0000000D49484452000000300000003008060000005702F9
                 87000000017352474200AECE1CE90000000467414D410000B18F0BFC61050000
-                028A494441546843ED96BF8B1A4114C7DD353112BD2342B83487828826211838
-                03A6B8CAFC099734FE19828595588888954DCA409A740602B990C035B706520A
-                160AFE404B8D22C65FAB4134EFCD2EA29B33EC65778FD9643EF06077DE63DF7B
-                33DF99590B83C16030188C7F14AEDBED3EEDF57A217C9686CC0357AD5643F3F9
-                FCBB288A8356ABF51CC72417FD90E2178B45772D834D088210449F14422F5CA3
-                D1C0E23B72ED8466B379110E871FA05F0AA3139CF967DB338FD46AB54BBFDFFF
-                10FC773186445208291E352FD74D80E28B1E8FE711F89D18432229E4CA99AFD7
-                EB82998ADFD13C147FE9F3F91E83DF7C338FB2D92A9E279114B24FF35FDD6EB7
-                398ABF6AE6B78AA75A36BF9DF358BCD7EB7D02FE43302BC66934D55C27982B97
-                CBA14020706EB3D98EE4314BBBDD5E59ADD67387C331B4DBED3FE1792DBBFE0A
-                9EE7D7D3E9F49BCBE57A0BAF2B69543B5CA55239516ADE28FAFDFE3BC879474A
-                FD67D46E34BE542A1D2C974B551FD50AE44119AAAA4DAD84F06387A954EA452C
-                167BE3743A51EB0494D06030B880A4737845F95C4BC34A388E5B4D2693622412
-                790DAFF84DDDB805763F994CBE1C8D464379B5099D4E47080683B8893D606E8D
-                760CE602C37CBA439A809578351E8F779A808DF7251A8D62E2DB729C1633F40E
-                C104A40958EA1F72FD04385E3FC7E3F103F06B92D14DB0DDC4CE4A40139FF2F9
-                FC668FD0CCA609A59C66B3D9C76C368B2B413D7B57029B800D8FBF15D4B3774F
-                98B509E54A7C305D13CA7B4214C5F7B95CCE2185D10D69022F3BD8D81B39C11D
-                312C140A27E0A3FE7845769A00498D3299CC198CE1D1AA7B0346CD0836712F9D
-                4E9FC2EF319748248AF03E045BA2534F8C5C526CC20E86394430DD8BBF09B078
-                232789C1603018FF3516CB2FA5D58712D4A3543E0000000049454E44AE426082}
+                0287494441546843ED96CFAB125114C7BD6399A4EF9110B5090511AD08836760
+                8B56F627541BFF0CC1852B712122AEDCB40CDAB433087A51F0366F0C5A0A2E14
+                FC815B4D097F8F8668E7DC1944A767CC6B661E77EA7EE080F79EC39CEFB9F7DC
+                7BB571381C0E87C3F94721BD5EEF71BFDF8FE06F79CA3A907ABD1E592C16DF25
+                49FAD1E9749EE29CEC621F2A7EB95CF6360A5884288A61F4C921EC425AAD168A
+                EF2ADA29ED76FB2C1A8DDE45BF1CC626B8F24F76571E69341AE7C160F03EF86F
+                620C8D64102A1E7B5ED14D01F1659FCFF700FC6E8CA1910C72E1CA379B4DD14A
+                E2F77A1EC49F07028187E0B7DECA63DBEC88176824831CEAF9AF5EAFD71AE22F
+                5AF91DF14CB7CD6FF73C8AF7FBFD8FC07F0C66C7389DA699CB04936AB51A0985
+                42A70E87E38E326783476A0DE35397CB35743A9D3FED76FB4671FD1582206C66
+                B3D9378FC7F316866B79563FA456AB9DA87BDE2C0683C13BC879434EFD67B41E
+                34A152A91CAD562B4D1FD50BE4C136D4A44D6B0BE1C78E3399CCF34422F1C6ED
+                7663AF53B08546A3D119245DC010DBE7523DAC8610B29E4EA7E5582CF61A86F8
+                4DC3B806763B9D4EBF1C8FC74365B729DD6E570C87C378887D605E9D760FCC03
+                86F90C8716013BF16A3299EC150107EF4B3C1EC7C4D795383D66EA1B82096811
+                B0D523453F05AED7CFC964F208FCBADAE82AD82D626F27A0884FC562717B4658
+                665B84BA9DE6F3F9C77C3E8F3BC13C0777028B80038F7F2B98E7E099B06A11EA
+                9DF860B922D4EF842449EF0B85824B0E631B5A043E7670B0B7ED046FC4B0542A
+                9D808FF9EB15D92B025A6A9CCBE55EC01C5EAD861760D68A6011B7B2D9EC33F8
+                7B4C52A95419C643B0153A8DC4CC2DC5229C60984302335CFC5580E2CD5C240E
+                87C3E1FCD7D86CBF00A58D8712D99023570000000049454E44AE426082}
               FileName = 
                 'C:\Users\TI\Desktop\Workspace\Projetos\Delphi\DeliveryControl\im' +
                 'ages\arrow_exit\res\mipmap-mdpi\ic_launcher.png'
