Liberação da versão 1.15.1

--- a/View/View.EntregasDetalhe.fmx
+++ b/View/View.EntregasDetalhe.fmx
@@ -59,7 +59,6 @@ object view_EntregasDetalhe: Tview_EntregasDetalhe
       TextSettings.HorzAlign = Trailing
       StyledSettings = [Family, Style]
       TabOrder = 1
-      RowHeight = 50.000000000000000000
       RowCount = 0
       Options = [ColLines, RowLines, RowSelect, Tabs, Header, AutoDisplacement]
       Viewport.Width = 342.000000000000000000
@@ -70,6 +69,7 @@ object view_EntregasDetalhe: Tview_EntregasDetalhe
       end
       object floatColumnPeso: TFloatColumn
         Header = 'Peso'
+        DecimalDigits = 3
         ShowThousandSeparator = False
         Size.Width = 71.000000000000000000
       end
@@ -108,27 +108,27 @@ object view_EntregasDetalhe: Tview_EntregasDetalhe
               PNG = {
                 89504E470D0A1A0A0000000D49484452000000300000003008060000005702F9
                 87000000017352474200AECE1CE90000000467414D410000B18F0BFC61050000
-                0289494441546843ED96CFAB125114C79D314DD2F74888DA8482885684C133B0
-                452BFB13AA8D7F86E0C295B81011576E5A066DDA1904BD28789B37062D05170A
-                FEDC6A4A4CFE1A0DD1CEB933884ECF98D7CC3CEED4FDC001EF3D8739DF73EFB9
-                F76A6330180C0683F18FC20D068347C3E1308ABFE529EBC0351A8DE862B1F826
-                49D2F75EAFF704E76417FD10F1CBE572B051C022044188A04F0EA117AEDD6EA3
-                F8BEA29DD0E974CE62B1D81DF4CB6174822BFF7877E59166B3791E0A85EE81FF
-                06C690480A21E2B1E715DD04105FF1FBFDF7C1EFC11812492117AE7CABD512AC
-                247EAFE741FC7930187C007EEBAD3CB6CD8E789E4452C8A19EFFE2F3F9AC21FE
-                A295DF114F75DBFC76CFA3F84020F010FCC760768CD3699AB94C3057ABD5A2E1
-                70F8D4E974DE56E66CDD6E77ED70384EDD6EB7E872B97EDAEDF68DE2FA2B789E
-                DFCC66B3AF5EAFF70D0CD7F2AC7EB87ABD7EA2EE79B3188D466F21E77539F59F
-                D17AD0F86AB57AB45AAD347D542F9007DB509336AD2D841F3BCE66B3CF92C9E4
-                6B8FC783BD4EC0161245F10C922E6088ED73A91E56C371DC7A3A9D56E2F1F82B
-                18E2370DE31AD8AD4C26F3623C1E8BCA6E13FAFDBE108944F010FBC17C3AED2E
-                98170CF3190E290276E2E56432D92B020EDEE7442281891D4A9C1E33F50DC104
-                A408D8EA1F8A7E025CAF9F52A9D411F875B5D155B05BC4DE4E40111F4BA5D2F6
-                8CD0CCB608753BCDE7F30F85420177827A0EEE041601071EFF5650CFC13361D5
-                22D43BF1DE7245A8DF094992DE158B45B71C4637A4087CECE0606FDB09DE08B1
-                5C2E9F808FFAEB15D92B025A6A9CCFE79FC31C5EAD861760D68A60113773B9DC
-                53F87BCCA5D3E90A8C45B0153A8DC4CC2DC5225C60984302335CFC5580E2CD5C
-                240683C160FCD7D86CBF00A5A5871248BA5DA80000000049454E44AE426082}
+                0287494441546843ED96CFAB125114C7BD63A9A4EF9110B5090511AD08836760
+                8B56F627541BFF0CC1852B712122AEDCB40CDAB433087A51F0366F0C5A0A2E14
+                FC815B4D09F3D7688876CE9D41747AC6BC66E671A7EE070E78EF39CCF99E7BCF
+                BD571B87C3E170389C7F14D2EFF71F0D068328FE96A7AC0369341AD1C562F14D
+                92A4EFDD6EF709CEC92EF6A1E297CB657FA3804588A218419F1CC22EA4DD6EA3
+                F89EA29DD2E974CE62B1D81DF4CB616C822BFF7877E59166B3791E0A85EE81FF
+                06C6D04806A1E2B1E715DD14105FF1FBFDF7C1EFC1181AC92017AE7CABD512AD
+                247EAFE741FC7930187C007EEBAD3CB6CD8E78814632C8A19EFFE2F3F9AC21FE
+                A295DF11CF74DBFC76CFA3F84020F010FCC760768CD3699AB94C30A9D56AD170
+                387CEA70386E2B733678B8D64EA7F3D4ED768F5C2ED74FBBDDBE515C7F852008
+                9BD96CF6D5EBF5BE81E15A9ED50FA9D7EB27EA9E378BE170F816723AE5D47F46
+                EB4113AAD5EAD16AB5D2F451BD401E6C434DDAB4B6107EEC389BCD3E4B2693AF
+                3D1E0FF63A055B683C1E9F41D2050CB17D2ED5C36A0821EBE9745A89C7E3AF60
+                88DF348C6B60B73299CC0B103C52769BD2EBF5C448248287D80FE6D36977C1BC
+                6098CF706811B0132F2793C95E1170F03E2712094C7C5D89D363A6BE21988016
+                015BFD43D14F81EBF5532A953A02BFAE36BA0A768BD8DB0928E263A954DA9E11
+                96D916A16EA7F97CFEA15028E04E30CFC19DC022E0C0E3DF0AE6397826AC5A84
+                7A27DE5BAE08F53B2149D2BB62B1E896C3D88616818F1D1CEC6D3BC11B312A97
+                CB27E063FE7A45F68A80961AE7F3F9E7308757ABE10598B52258C4CD5C2EF714
+                FE1E93743A5D81F1086C854E2331734BB1081718E690C00C177F15A078331789
+                C3E17038FF3536DB2FA5758712B9936AA40000000049454E44AE426082}
               FileName = 
                 'C:\Users\TI\Desktop\Workspace\Projetos\Delphi\DeliveryControl\im' +
                 'ages\arrow_exit\res\mipmap-mdpi\ic_launcher.png'
