--- a/View/View.Extratos.fmx
+++ b/View/View.Extratos.fmx
@@ -27,7 +27,7 @@ object view_Extratos: Tview_Extratos
       Size.PlatformDefault = False
       TabOrder = 0
       object comboBoxAno: TComboBox
-        Position.X = 104.000000000000000000
+        Position.X = 112.000000000000000000
         Position.Y = 96.000000000000000000
         Size.Width = 57.000000000000000000
         Size.Height = 24.000000000000000000
@@ -43,9 +43,9 @@ object view_Extratos: Tview_Extratos
           '25'
           '31')
         ItemIndex = 0
-        Position.X = 248.000000000000000000
+        Position.X = 256.000000000000000000
         Position.Y = 96.000000000000000000
-        Size.Width = 57.000000000000000000
+        Size.Width = 49.000000000000000000
         Size.Height = 24.000000000000000000
         Size.PlatformDefault = False
         StyleLookup = 'comboboxstyle'
@@ -67,7 +67,7 @@ object view_Extratos: Tview_Extratos
           'NOV'
           'DEZ')
         ItemIndex = 0
-        Position.X = 168.000000000000000000
+        Position.X = 176.000000000000000000
         Position.Y = 96.000000000000000000
         Size.Width = 73.000000000000000000
         Size.Height = 24.000000000000000000
@@ -83,7 +83,7 @@ object view_Extratos: Tview_Extratos
         ItemIndex = 0
         Position.X = 9.000000000000000000
         Position.Y = 96.000000000000000000
-        Size.Width = 88.000000000000000000
+        Size.Width = 96.000000000000000000
         Size.Height = 24.000000000000000000
         Size.PlatformDefault = False
         TabOrder = 3
@@ -98,55 +98,56 @@ object view_Extratos: Tview_Extratos
             PNG = {
               89504E470D0A1A0A0000000D49484452000000300000003008060000005702F9
               87000000017352474200AECE1CE90000000467414D410000B18F0BFC61050000
-              0607494441546843ED586B6C5445143E77EEBEB7DB774BDF2DB55468282D2DE1
-              6548C1408C8015C59828118D28898F003FD440E28B0443CBC31F9080286A082A
-              A88512154409606C4969A19152032D027DD0776969D976DBDDFB18E7DCDDDB34
-              DACABDDD8290EC979CCC396766F69E6FE6DC33731702082080000208E04106E7
-              6BC70BC37F8FFADABB0A7F09E07C32E3E0D5292E4B489E28731325C2DB882C0F
-              1A086D08F6F497963F9B7C818D9199DC1542FE1030647EDBB0B8CF14B6A1BFB1
-              69969098C4515F886AA43CFB751B27550589038535054B8AA0B252F0758D1BC6
-              42807BF8E5C220E989D53B7B1B5A578A494943BFF14F026ACB3536D2E094B8E2
-              D0F2A3AF5417ACE8612EB5CB6FE825C0A5ADF8C0212C5F7BC809E68518074642
-              AF5FA362A8F906F474D780C7D543798B838685A7F3C19E89604823DEA9007610
-              CA4CE70F2C692C787DDC48E825604AFEBE63AF93B7BFA0062F77B6D40E9EDC57
-              E82EDE520182E0622E8909CF865A8C4B574F332F7E753D17959A4D39EFA31CE0
-              3EDCFAFEBCE7E0D2258FE2F0137A0890D42FAA97F5DEE68B284B1B0C5E6CAA3D
-              EDDC94BF0E3A9A5B99D98F2E26F8C2E2EF1A98D8C0141465DB74FC23929AF5B4
-              E26E6CA02121FCCAE655930FB07E247BCF6089FDAEAB22EC701F4509D95B7F19
-              62923298DFC184ADF8888B817E3B98CD69B65D97CFDA8BFA284AF881CE8BCC6F
-              5546F889A1FCBC0348E2A6A353DD2DED3314ABBE9E8AE58736425B6313B370E5
-              712547CA69F4BBC0ED6E934EEC7E0F9C9D228E721BAC99B105A773599FD6E78F
-              0ACD0406A352E663EA285674647DFF57EF96300D731E53E6BF80C406DCC53BAA
-              40265568288EB0B879ACB9670478CA1B53B04CA24803BDD53030D0C7FC5A7318
-              49BAE860FF79AFC926127E226B30C5FC8256021C25BCDDA7039169176BF050C2
-              C5D4021C277254BC39641062638D9E223222346FA124BADDD82A115BACF8E26A
-              0D5E05E54C56873A890C0EE20EFA0DAD0428B89CCDEAC3A9D93E15206AB4CA33
-              1A08B13BA6FB74906FB7D7B246EF22FC0B5A09C89EDAB3E594BD00CA130DEDE9
-              89DBBEC9669A560224E69D7D29926C9889066DEFF78847F79C64AADFE7805602
-              926BF7DA0B70FBD6653428974C3C89B985909B6B517AEF8834A398F3F866D962
-              312B0B407A4A84D2835882EF54C1EE08ED29C4AA8870A5EC132ACB4A2572F1A6
-              B9891B8EEF84E43C2431DA4E307FAE31E1E0EF1FBA78DB934AF0757554AA3AF1
-              29D30699F84D404F0E1BC06A9D60DD5AF6A521266D110683934388782AE266DD
-              9AAAD5D36B988901A95D24735749725754C6B65E303FA5E60A6DBD7ACCBD267B
-              1553B122E1D5C32FE8218063AD903A23D5FEF6FEFD5C5422BE034AB426AE57B0
-              72B60A23D03223485D02F0A11E4A66BA80CEF1C8468BB2F208A6D807BA7F0DE2
-              A5DFCC6DD59F5D792B1FCBF150F758A087000253CE0E29D9A9D6357BB7928449
-              8B8078CF22F55B00313C2245676927DFA82901DE2873F193F2D015443DE52197
-              4EE75FDFB8BC531D3616E83D09F14122F4B4F589BFEC3BC545C6377141112960
-              B645B022393440059544106E365DA395C7B60B5B9ED96698BB2C1222121FC131
-              1E8E4F10A293E7C5A565FDD8537A08AF246382DE1D5081D19A98E081164A96BE
-              99639C32772638A2E32593C942048F9BF6DD6A91AE949D978B3F3EC7C6F43271
-              41D66349E4B59D5F1BC2E3B254A23610CE86FFF1F3B2BACDCF773053F74E8C95
-              0002E722112313AC44669F8E7EEF4EB18B2713AC36F8F1823E3B642E48276FEC
-              F99C6724D083CE20F0948757FC947F7DFB4ADDE9E4EF656A78A0034CF06A8D57
-              0414D4D1A7DE995024E8A877D2FA8B672063C12CCEE688613EC68E4F90621FCA
-              4B484F3FD25DFA03CED10CBF6F83C3800162195565A495F412EE6870D2C6CA33
-              30F5D1D99C2D78023AD93B112FC5A6CF4F48D347623C0968858FC40D27BD76AE
-              14A62D9C8324B083ED44BC149D9E97909373A4FB549126125A4FE2F1069E6BFD
-              5053FE97BCE3C597685773B5D70DE06C68C96D37C52D66EAFF159B2E600604C3
-              E4D9396457ED45BEE04F915BCF3E5501227D7D0F04BC2432F2B2C9BAFD6B991E
-              C7042B9A26F85346C713982E588AF1AF182CBB7ABEF6EE1BE062DE2F0B1A4000
-              010410C0030180BF019957494EA43085990000000049454E44AE426082}
+              060B494441546843ED586B4C5447143E77EEBE970501411E8B2C14B74A44108C
+              AFC6A08DA6A95A6A6BD3A435B54D6D4DFA88FAA36D34E9CBC456F0D11F9A686D
+              6D1B635B6D8B62DA6A6D8DDA140C82928A340A2AB022088220B8B0ECE3DE3B9D
+              73772F212DD4BB2C5A4DF64B4EE69C33337BCF3773EE99B90B61841146186184
+              F120830BB4A385C1BF4703ED5D45A804703E99B6FFCA2497212A5F90B83491F0
+              2622496E0DA15723BD7D6515CFA69E6363242677855028043459DF5D5DD8AB8B
+              5ED7E7689AE14BB5713410A21229CF7EDDC489D511427F516DE1A262A8AAF205
+              BA460D2321C03DFC725184F8C4CAED3D8D2DCB059B6DE037FE49406939878346
+              A65B4BC6541C7EA5A670593773295D212358025CC6B20F2CBEA5AB0F38413F1F
+              E3C048E895CB5488315E83EEAE5AF0BABA296FB0D0E8183B1FE94E038D9DF8A7
+              0298C157AE3BBB6F5153E1EBA346225802BAD41FDA773B79F30B4AF052C7F53A
+              F7F13D459E924D95E0F3B9984B64C2B3A106EDE29553F40B5F5DCBC5A5E750CE
+              FF280B780EB6BE3FE739B870C12B3B4244300448FA97354B7ABAB962CAD20683
+              179AEB4E3A3714AC81F6965666F6A18B09BEB0F8BB1A2626D045C499361CFD88
+              A4673F2DBB1D8D342A5ABBBC65C5C47DAC1FC9DE331812BFEFAC8C3ED84B51A2
+              763B2E42C2F84CE6B730612B3EE462A0DF0C7A7D8669C7C5D3E6E25E8A12B3AF
+              E33CF31BE5112162203FEF0092B2E1F0644F73EB34D96A68A042C581F5D0D6D4
+              CC2C5C795CC9A1721AFD2EF078DAC4633BDF03678780A33C1A635662E1C93CD6
+              A7F6F9C3423501779C6D2EA68E6C25C43BFABE7EB7946998F39832FF0524D6EF
+              29D9560D12A94643764427CD61CD3D23C0535E6BC3328922F6F7D4407F7F2FF3
+              ABCD6124E9A2EEBEB37E934D247C1A6B30C542825A021C25BC39A0039168276B
+              F050C2C554031C277054B839601062624D30456448A8DE4251F078B095233618
+              F1C5551BBC02CAE98C16651271BB710743865A02145CCE16E5E1546F9E0C1037
+              5CE5190E84982D53033A48B76FD4B126D845F817D41290BC75A72B287B01E427
+              6A5AED295BBECD619A5A0224E19D3D3651D24C4783DEE8F30A87771D676AC8E7
+              805A02A26BE7EA7370FBD64534289746BC297945909767907BEF880CAD90FBF8
+              46C960D0CB0B40BA4B7D65FBB104DFA982DD11EA53885511DFA5F24FA924C995
+              C8C5EB66A7AC3BBA1D52F391C4703BC1FC795AEBFE3F3E74F1A627E5E0EBEBA9
+              587DEC33A6B999844C20981CD680D138CEB8B9FC2B4D42C6020C06274711E144
+              ECCDC655D52BA7D632130352BA48D68ED2D4CEB8CC2D3DA07F4AC915DA7AE588
+              6755CE0AA66245C2AB47480886008E3542FAB474F3DB7BF7727129F80EC8D1EA
+              B81E9F9133556A81966B41ECF4013FC64BC97417D0595E496B90571EC114737F
+              D76F11BCF8BBBEADE6F34B6F1560391EE81E09822180C09433832D27DDB86AF7
+              66629DB00088FF2C52BE0510832392759676D2B5DA52E0B512973C211F5D11D4
+              5B1175E16441C3FAA51DCAB09120D893101F2440775BAFF0EB9E13DCD8E4662E
+              22D6067A532C2B92030314505100DFCDE67A5A7564AB6FD3335B34B3978C85D8
+              9447708C97E3ADBEF8D4394919D93F75971DC02BC98810EC0E28C068754CF040
+              1B4316BF99AB9D347B3A58E293459DCE407C5E0FEDBD755DBC547E562AF9E40C
+              1BD3C3C405D98F8D27AF6DFF46139394AD103581EF74CC9FBF2C69DCF87C3B33
+              83DE89911240E05C24A2658295481FD0D1EFDF2976F16482D5063F5ED06786AC
+              7976F2C6AE2F7846023DE88C006F454CE5CF050D5B97079D4EA15EA60607DACF
+              04AFD6784540411D7DCA9D0945847687933ACE9F82CC793338932581F9183BDE
+              2A263E946FB5DB0F7595FD88735423E4DBE0206080584615196A25FD84DBAF3A
+              6953D52998FCE84CCE14390E9DEC9D481613ED73AD19C191184D026A112071CD
+              49EBCF94C194F9B3900476B09D4816E3EDF9D6DCDC435D278A5591507B128F36
+              F05CEB83DA8ACBD2B6175FA29D2D357E3780B3F17ADE0D5DD242A6FE5FB10505
+              CC804898383397ECA83BCF7FFC97C0AD659FAA0063037D0F04FC2432F373C89A
+              BDAB999EC4042B9A2A8452464713982E588AF1AF182CBBC17CEDDD37C0C5BC5F
+              16348C30C208238C0702007F032A614946310CD3CA0000000049454E44AE4260
+              82}
             FileName = 
               'C:\Users\TI\Desktop\Workspace\Projetos\Delphi\DeliveryControl\im' +
               'ages\search\res\mipmap-mdpi\ic_launcher.png'
@@ -169,7 +170,7 @@ object view_Extratos: Tview_Extratos
         Margins.Left = 8.000000000000000000
         Margins.Top = 15.000000000000000000
         Margins.Bottom = 15.000000000000000000
-        Position.X = 105.000000000000000000
+        Position.X = 113.000000000000000000
         Position.Y = 71.000000000000000000
         Size.Width = 48.000000000000000000
         Size.Height = 28.000000000000000000
@@ -183,7 +184,7 @@ object view_Extratos: Tview_Extratos
         Margins.Left = 8.000000000000000000
         Margins.Top = 15.000000000000000000
         Margins.Bottom = 15.000000000000000000
-        Position.X = 249.000000000000000000
+        Position.X = 257.000000000000000000
         Position.Y = 71.000000000000000000
         Size.Width = 48.000000000000000000
         Size.Height = 28.000000000000000000
@@ -197,7 +198,7 @@ object view_Extratos: Tview_Extratos
         Margins.Left = 8.000000000000000000
         Margins.Top = 15.000000000000000000
         Margins.Bottom = 15.000000000000000000
-        Position.X = 167.000000000000000000
+        Position.X = 175.000000000000000000
         Position.Y = 71.000000000000000000
         Size.Width = 74.000000000000000000
         Size.Height = 28.000000000000000000
@@ -253,51 +254,13 @@ object view_Extratos: Tview_Extratos
         TabOrder = 0
       end
     end
-    object stringGridExtrato: TStringGrid
-      Align = Client
-      CanFocus = True
-      ClipChildren = True
-      Cursor = crHandPoint
-      Margins.Left = 10.000000000000000000
-      Margins.Top = 5.000000000000000000
-      Margins.Right = 10.000000000000000000
-      Margins.Bottom = 10.000000000000000000
-      Size.Width = 340.000000000000000000
-      Size.Height = 360.000000000000000000
-      Size.PlatformDefault = False
-      StyleLookup = 'gridstyle'
-      TextSettings.HorzAlign = Trailing
-      StyledSettings = [Family, Style]
-      TabOrder = 1
-      RowHeight = 50.000000000000000000
-      RowCount = 0
-      Options = [ColumnResize, ColumnMove, ColLines, RowLines, RowSelect, Tabs, Header, HeaderClick, AutoDisplacement]
-      Viewport.Width = 336.000000000000000000
-      Viewport.Height = 335.000000000000000000
-      object stringColumnQtde: TStringColumn
-        Header = 'Qtde.'
-        Size.Width = 41.000000000000000000
-      end
-      object stringColumnDescricao: TStringColumn
-        Header = 'Descri'#231#227'o'
-        Size.Width = 111.000000000000000000
-      end
-      object stringColumnUnitario: TStringColumn
-        Header = 'Unit'#225'rio'
-        Size.Width = 49.000000000000000000
-      end
-      object stringColumnValor: TStringColumn
-        Header = 'Valor'
-        Size.Width = 77.000000000000000000
-      end
-    end
     object layoutFooter: TLayout
       Align = Bottom
       Position.Y = 552.000000000000000000
       Size.Width = 360.000000000000000000
       Size.Height = 49.000000000000000000
       Size.PlatformDefault = False
-      TabOrder = 2
+      TabOrder = 1
       object labelPeriodo: TLabel
         Align = Center
         StyledSettings = [Family, Size, Style]
@@ -315,7 +278,7 @@ object view_Extratos: Tview_Extratos
       Size.Width = 360.000000000000000000
       Size.Height = 33.000000000000000000
       Size.PlatformDefault = False
-      TabOrder = 3
+      TabOrder = 2
       object rectangleTitle: TRectangle
         Align = Client
         Fill.Color = xFF03A9F4
@@ -333,27 +296,27 @@ object view_Extratos: Tview_Extratos
               PNG = {
                 89504E470D0A1A0A0000000D49484452000000300000003008060000005702F9
                 87000000017352474200AECE1CE90000000467414D410000B18F0BFC61050000
-                028A494441546843ED96BF8B1A4114C7DD353112BD2342B83487828826211838
-                03A6B8CAFC099734FE19828595588888954DCA409A740602B990C035B706520A
-                160AFE404B8D22C65FAB4134EFCD2EA29B33EC65778FD9643EF06077DE63DF7B
-                33DF99590B83C16030188C7F14AEDBED3EEDF57A217C9686CC0357AD5643F3F9
-                FCBB288A8356ABF51CC72417FD90E2178B45772D834D088210449F14422F5CA3
-                D1C0E23B72ED8466B379110E871FA05F0AA3139CF967DB338FD46AB54BBFDFFF
-                10FC773186445208291E352FD74D80E28B1E8FE711F89D18432229E4CA99AFD7
-                EB82998ADFD13C147FE9F3F91E83DF7C338FB2D92A9E279114B24FF35FDD6EB7
-                398ABF6AE6B78AA75A36BF9DF358BCD7EB7D02FE43302BC66934D55C27982B97
-                CBA14020706EB3D98EE4314BBBDD5E59ADD67387C331B4DBED3FE1792DBBFE0A
-                9EE7D7D3E9F49BCBE57A0BAF2B69543B5CA55239516ADE28FAFDFE3BC879474A
-                FD67D46E34BE542A1D2C974B551FD50AE44119AAAA4DAD84F06387A954EA452C
-                167BE3743A51EB0494D06030B880A4737845F95C4BC34A388E5B4D2693622412
-                790DAFF84DDDB805763F994CBE1C8D464379B5099D4E47080683B8893D606E8D
-                760CE602C37CBA439A809578351E8F779A808DF7251A8D62E2DB729C1633F40E
-                C104A40958EA1F72FD04385E3FC7E3F103F06B92D14DB0DDC4CE4A40139FF2F9
-                FC668FD0CCA609A59C66B3D9C76C368B2B413D7B57029B800D8FBF15D4B3774F
-                98B509E54A7C305D13CA7B4214C5F7B95CCE2185D10D69022F3BD8D81B39C11D
-                312C140A27E0A3FE7845769A00498D3299CC198CE1D1AA7B0346CD0836712F9D
-                4E9FC2EF319748248AF03E045BA2534F8C5C526CC20E86394430DD8BBF09B078
-                232789C1603018FF3516CB2FA5D58712D4A3543E0000000049454E44AE426082}
+                0289494441546843ED96CFAB125114C79D314DD2F74888DA8482885684C133B0
+                452BFB13AA8D7F86E0C295B81011576E5A066DDA1904BD28789B37062D05170A
+                FEDC6A4A4CFE1A0DD1CEB933884ECF98D7CC3CEED4FDC001EF3D8739DF73EFB9
+                F76A6330180C0683F18FC20D068347C3E1308ABFE529EBC0351A8DE862B1F826
+                49D2F75EAFF704E76417FD10F1CBE572B051C022044188A04F0EA117AEDD6EA3
+                F8BEA29DD0E974CE62B1D81DF4CB6174822BFF7877E59166B3791E0A85EE81FF
+                06C690480A21E2B1E715DD04105FF1FBFDF7C1EFC11812492117AE7CABD512AC
+                247EAFE741FC7930187C007EEBAD3CB6CD8E789E4452C8A19EFFE2F3F9AC21FE
+                A295DF114F75DBFC76CFA3F84020F010FCC760768CD3699AB94C3057ABD5A2E1
+                70F8D4E974DE56E66CDD6E77ED70384EDD6EB7E872B97EDAEDF68DE2FA2B789E
+                DFCC66B3AF5EAFF70D0CD7F2AC7EB87ABD7EA2EE79B3188D466F21E77539F59F
+                D17AD0F86AB57AB45AAD347D542F9007DB509336AD2D841F3BCE66B3CF92C9E4
+                6B8FC783BD4EC0161245F10C922E6088ED73A91E56C371DC7A3A9D56E2F1F82B
+                18E2370DE31AD8AD4C26F3623C1E8BCA6E13FAFDBE108944F010FBC17C3AED2E
+                98170CF3190E290276E2E56432D92B020EDEE7442281891D4A9C1E33F50DC104
+                A408D8EA1F8A7E025CAF9F52A9D411F875B5D155B05BC4DE4E40111F4BA5D2F6
+                8CD0CCB608753BCDE7F30F85420177827A0EEE041601071EFF5650CFC13361D5
+                22D43BF1DE7245A8DF094992DE158B45B71C4637A4087CECE0606FDB09DE08B1
+                5C2E9F808FFAEB15D92B025A6A9CCFE79FC31C5EAD861760D68A60113773B9DC
+                53F87BCCA5D3E90A8C45B0153A8DC4CC2DC5225C60984302335CFC5580E2CD5C
+                240683C160FCD7D86CBF00A5A5871248BA5DA80000000049454E44AE426082}
               FileName = 
                 'C:\Users\TI\Desktop\Workspace\Projetos\Delphi\DeliveryControl\im' +
                 'ages\arrow_exit\res\mipmap-mdpi\ic_launcher.png'
@@ -379,6 +342,40 @@ object view_Extratos: Tview_Extratos
         TextSettings.HorzAlign = Center
         Text = 'Delivery Control'
         TabOrder = 1
+      end
+    end
+    object StringGridExtrato: TStringGrid
+      Align = Client
+      CanFocus = True
+      ClipChildren = True
+      Margins.Left = 5.000000000000000000
+      Margins.Top = 5.000000000000000000
+      Margins.Right = 5.000000000000000000
+      Margins.Bottom = 5.000000000000000000
+      Size.Width = 350.000000000000000000
+      Size.Height = 365.000000000000000000
+      Size.PlatformDefault = False
+      TextSettings.Font.Size = 11.000000000000000000
+      StyledSettings = [Family, Style, FontColor]
+      TabOrder = 3
+      Options = [ColumnResize, ColumnMove, ColLines, RowLines, Tabs, Header, HeaderClick, AutoDisplacement]
+      Viewport.Width = 350.000000000000000000
+      Viewport.Height = 365.000000000000000000
+      object integerColumnQtde: TIntegerColumn
+        Header = 'Qtde.'
+        Size.Width = 41.000000000000000000
+      end
+      object stringColumnDescricao: TStringColumn
+        Header = 'Descri'#231#227'o'
+        Size.Width = 167.000000000000000000
+      end
+      object currencyColumnUnitario: TCurrencyColumn
+        Header = 'Unit.'
+        Size.Width = 47.000000000000000000
+      end
+      object currencyColumnValor: TCurrencyColumn
+        Header = 'Total'
+        Size.Width = 71.000000000000000000
       end
     end
   end
